src/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>City_Address__c</fullName>
        <label>City Address</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Self_Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Technician</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Self_Service_Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Appointment_Date__c</fullName>
        <label>Requested Appointment  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Appointment_Time_Hour__c</fullName>
        <label>Requested Appointment  Time Hour</label>
        <picklist>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Address_Geo__c</fullName>
        <label>Service Address Geo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>State_Address__c</fullName>
        <label>State Address</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Address__c</fullName>
        <label>Zip Address</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>SUBMITTED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ASSIGNED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENROUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESOLVED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Field_Technician__c</columns>
        <columns>Problem_Description__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>